Now title is red

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Hello World!</title>
 </head>
 <body>
-<h1>Hello World!</h1>
+<h1 style="color:#f00">Hello world!</h1>
 <p>pagina creada por Yassire Zerhouni Bouyi.</p>
 </body>
 </html>
